Добавил Стоимость услуг в  index.html

--- a/index.html
+++ b/index.html
@@ -131,11 +131,60 @@
       </div>
     </section>
 
-    <!-- Стоимость услуг (остается без изменений) -->
+    <!-- Стоимость услуг -->
     <section class="mb-12">
-      <!-- ... ваш существующий раздел с ценами ... -->
+      <h2 class="text-2xl font-semibold mb-6 text-center text-gray-900 tracking-tight">Стоимость услуг</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-7xl mx-auto">
+        <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200">
+          <h3 class="text-xl font-semibold mb-5 border-b border-gray-200 pb-3 text-gray-900 tracking-tight">Будние дни</h3>
+          <ul class="space-y-4 text-gray-700 text-base leading-relaxed">
+            <li class="flex items-center space-x-3">
+              <i class="fas fa-vr-cardboard text-blue-600 text-lg flex-shrink-0"></i>
+              <span>VR очки — 500 руб./час (половина часа 250 руб)</span>
+            </li>
+            <li class="flex items-center space-x-3">
+              <i class="fas fa-gamepad text-blue-600 text-lg flex-shrink-0"></i>
+              <span>PS за 1 джойстик — 150 руб./час</span>
+            </li>
+          </ul>
+        </div>
+        <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200">
+          <h3 class="text-xl font-semibold mb-5 border-b border-gray-200 pb-3 text-gray-900 tracking-tight">Выходные дни</h3>
+          <ul class="space-y-4 text-gray-700 text-base leading-relaxed">
+            <li class="flex items-center space-x-3">
+              <i class="fas fa-vr-cardboard text-indigo-600 text-lg flex-shrink-0"></i>
+              <span>VR очки — 750 руб./час (половина часа 350 руб)</span>
+            </li>
+            <li class="flex items-center space-x-3">
+              <i class="fas fa-gamepad text-indigo-600 text-lg flex-shrink-0"></i>
+              <span>PS за 1 джойстик — 250 руб./час</span>
+            </li>
+          </ul>
+        </div>
+        <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200">
+          <h3 class="text-xl font-semibold mb-5 border-b border-gray-200 pb-3 text-gray-900 tracking-tight">День рождения</h3>
+          <ul class="space-y-3 text-gray-700 text-base leading-relaxed">
+            <li>Первый час — 4000 руб.</li>
+            <li>Второй час — 3500 руб.</li>
+            <li>Третий час — 3000 руб.</li>
+            <li>Четвертый и далее — 3000 руб./час</li>
+          </ul>
+          <p class="mt-5 font-semibold text-gray-900 tracking-tight">В стоимость входит аренда всего помещения:</p>
+          <ul class="list-disc list-inside text-gray-700 space-y-1 mt-2 text-base leading-relaxed">
+            <li>VR очки</li>
+            <li>PS комната</li>
+            <li>Караоке</li>
+            <li>Кино</li>
+            <li>XBOX 360</li>
+            <li>Танцы в XBOX</li>
+            <li>Игры на ПК</li>
+          </ul>
+          <p class="mt-4 text-gray-500 italic text-sm">Можно заказать свою еду и напитки</p>
+        </div>
+      </div>
     </section>
   </main>
+
 
   <!-- Модальное окно бронирования -->
   <div id="bookingModal" class="fixed inset-0 bg-white bg-opacity-90 flex items-center justify-center p-6 hidden z-50">
