--- a/index.html
+++ b/index.html
@@ -60,20 +60,18 @@
     content: "+7 (";
     position: absolute;
     left: 16px;
-    top: 16px; /* Точная подгонка под высоту поля */
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
     color: #6b7280;
     pointer-events: none;
     font-size: 16px;
-    line-height: 1.5;
-    height: 24px;
-    display: flex;
-    align-items: center;
   }
   .phone-input input {
     padding-left: 50px;
     height: 48px;
     font-size: 16px;
-    padding-top: 1px; /* Дополнительная корректировка */
   }
   </style>
 </head>
