--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
     content: "+7 (";
     position: absolute;
     left: 16px;
-    top: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    color: #6b7280;
+    top: 13px; /* Точное выравнивание с текстом в поле */
+    color: #9ca3af; /* Такой же цвет как у плейсхолдера */
     pointer-events: none;
     font-size: 16px;
+    font-family: inherit; /* Такой же шрифт как в поле */
+    line-height: 1.5;
   }
   .phone-input input {
     padding-left: 50px;
     height: 48px;
     font-size: 16px;
+    font-family: inherit;
   }
   </style>
 </head>
@@ -219,9 +219,9 @@
           <input type="text" id="clientName" name="clientName" required autocomplete="off" class="w-full rounded-3xl border border-gray-300 px-5 py-3 text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-blue-500 focus:outline-none transition" placeholder="Введите имя клиента" />
         </div>
         <div class="phone-input">
-        <label for="clientPhone" class="block text-gray-900 font-semibold mb-2">Номер телефона</label>
-        <input type="tel" id="clientPhone" name="clientPhone" required autocomplete="off" 
-         class="w-full rounded-3xl border border-gray-300 px-5 py-3 text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-blue-500 focus:outline-none transition" 
+      <label for="clientPhone" class="block text-gray-900 font-semibold mb-2">Номер телефона</label>
+      <input type="tel" id="clientPhone" name="clientPhone" required autocomplete="off"
+         class="w-full rounded-3xl border border-gray-300 px-5 py-3 text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-blue-500 focus:outline-none transition"
          placeholder="XXX) XXX-XX-XX" />
         </div>
         <div>
