--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
         <div>
           <label for="notes" class="block text-gray-900 font-semibold mb-2">Примечания</label>
-          <textarea id="notes" name="notes" rows="3" placeholder="Введите дополнительные сведения" class="w-full rounded-3xl border border-gray-300 px-5 py-3 text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-blue-500 focus:outline-none transition resize-none"></textarea>
+          <textarea id="notes" name="notes" rows="3" placeholder="например, общее кол-во человек и др. важная инфа" class="w-full rounded-3xl border border-gray-300 px-5 py-3 text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-blue-500 focus:outline-none transition resize-none"></textarea>
         </div>
         <div class="flex space-x-4">
           <button type="submit" class="flex-grow bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white py-3 rounded-3xl font-semibold transition focus:ring-4 focus:ring-blue-300 focus:outline-none">Сохранить запись</button>
